MB-52542: CompactDB failure paths aren't clearing the engine specific

Two problems are found in compaction cookie handling.

1) If the worker thread (request) part of compactDB encounters
"not-my-vbucket" the engine-specific is left !null.

2) If the compaction task aborts or fails it doesn't clear the
engine-specific of any waiting cookies.

Both of these cases can lead to the issue detected in MB-52542 where
a subsequent async command will fail to execute correctly.

Change-Id: Ifeb337a2a120ee24cc971f3d9a72cf23135f33b9
Reviewed-on: https://review.couchbase.org/c/kv_engine/+/176293
Reviewed-by: Dave Rigby <daver@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Well-Formed: Restriction Checker